hphp/test/quick/dv_bi.php.expectf
HipHop Fatal error: Default value for parameter a0 with type Int64 needs to have the same type as the type hint bool in %s on line 3
